--- a/JSFinal/jsFinal.html
+++ b/JSFinal/jsFinal.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Katie Lynn Fischer</title>
 	<link rel="stylesheet" type="text/css" href="/JSFinal/jsFinal.css">
 	<script src="/JSFinal/jsFinal.js"></script>
 </head>
 <body>
 	<header>
-        <a href="/JSFinal/jsFinal.html" class="header-logo-link">
-            <img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+		<div class="header-container">
+        	<a href="/JSFinal/jsFinal.html" class="header-logo-link">
+            	<img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         </a>
 		<nav>
 			<ul>
@@ -19,9 +21,10 @@
             <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
 			</ul>
 		</nav>
+	</div>
 	</header>
     <main>
-        <br><h1>howdy.</h1><br>
+        <h1>howdy.</h1>
         <div id="home-img">
         <img id="home-image" src="/css-midterm/galleryimages/DJI_0286-2.jpg"alt="Home Image, Tulum drone b&w">
         </div>
