--- a/JSFinal/photosFinal.html
+++ b/JSFinal/photosFinal.html
@@ -9,21 +9,23 @@
 </head>
 <body>
 	<header>
-        <a href="/JSFinal/jsFinal.html" class="header-logo-link">
-            <img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        <div class="header-container">
+        	<a href="/JSFinal/jsFinal.html" class="header-logo-link">
+            	<img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         </a>
 		<nav>
 			<ul>
-                <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
-                <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
-                <li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
-                <li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
-                <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
+            <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
+            <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
+			<li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
+			<li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
+            <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
 			</ul>
 		</nav>
+	</div>
 	</header>
 	<main>
-		<br><h1>Gallery</h1><br>
+		<h1>gallery</h1>
 		    <div id="gallery">
                 <img src="/css-midterm/galleryimages/AK.webp" alt="Alaska Plane">
                 <img src="/css-midterm/galleryimages/alaska.webp" alt="Alaska AM">
