--- a/JSFinal/resumeFinal.html
+++ b/JSFinal/resumeFinal.html
@@ -8,31 +8,26 @@
 </head>
 <body>
     <header>
-        <a href="/JSFinal/jsFinal.html" class="header-logo-link">
-            <img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        <div class="header-container">
+        	<a href="/JSFinal/jsFinal.html" class="header-logo-link">
+            	<img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         </a>
-        <a href="/JSFinal/jsFinal.css">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
-                <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
-				<li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
-				<li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
-                <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
-            </ul>
-        </nav>
+		<nav>
+			<ul>
+            <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
+            <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
+			<li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
+			<li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
+            <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
+			</ul>
+		</nav>
+	</div>
     </header>
-
-
     <div class="resume-content">
-        <br>
-        <br>
-        <br>
+       <br>
         <img id="resume-image"<img src="/JSFinal/designfiles/indesignresume.png"alt="Resume">
-        <br>
-        <br>
-        <br>
+       <br>
+       <br>
     </div>
    
 
