--- a/JSFinal/aboutmeFinal.html
+++ b/JSFinal/aboutmeFinal.html
@@ -20,7 +20,7 @@
 			<li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
 			<li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
             <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
-			<li><a href="/JSFinal/prices.html"data-page="prices">Services</a></li>
+			<li><a href="/JSFinal/pricing.html"data-page="prices">Services</a></li>
 			</ul>
 		</nav>
 	</div>
