--- a/JSFinal/pricing.html
+++ b/JSFinal/pricing.html
@@ -20,7 +20,7 @@
                     <li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
                     <li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
                     <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
-                    <li><a href="/JSFinal/prices.html"data-page="prices">Services</a></li>
+                    <li><a href="/JSFinal/pricing.html"data-page="prices">Services</a></li>
                 </ul>
             </nav>
         </div>
@@ -56,11 +56,11 @@
                 </li>
                 <li>
                     <h1 class="item-title">- Boulder Vicinity Wedding Option A - $4000</h1>
-                    <p class="item-desc">Within 20 miles of Boulder. 60 guests max as it'll just be me, I don't generally have a second shooter. Six hours of shooting.</p>
+                    <p class="item-desc">Within 20 miles of Boulder. Six hours of wedding day coverage, day of sneak-peek photos, all access to digital edited images on an online gallery.</p>
                 </li>
                 <li>
                     <h1 class="item-title">- Boulder Vicinity Wedding Option B - $5000</h1>
-                    <p class="item-desc">Within 20 miles of Boulder. 60 guests max as it'll just be me, I don't generally have a second shooter. Eight hours of shooting.</p>
+                    <p class="item-desc">Within 20 miles of Boulder. Engagement session (one hour, one location, two outfits.) Eight hours of wedding day coverage, day of sneak-peek photos, all access to digital edited images on an online gallery.</p>
                 </li>
                 <li>
                     <h1 class="item-title">- Colorado A La Carte Wedding/ Elopement - $250/hour, $2500 minimum</h1>
