--- a/index.html
+++ b/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="/css-midterm/cssMid.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Katie Lynn Fischer</title>
+	<link rel="stylesheet" type="text/css" href="/JSFinal/jsFinal.css">
+	<script src="/JSFinal/jsFinal.js"></script>
 </head>
 <body>
-    <header>
-        <a href="/css-midterm/cssMid.html">
-            <img src="/css-midterm/galleryimages/name.png" alt="Logo">
+	<header>
+		<div class="header-container">
+        	<a href="/JSFinal/jsFinal.html" class="header-logo-link">
+            	<img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         </a>
-        <nav>
-            <ul>
-                
-                <li><a href="cssMid.html">Home</a></li>
-                <li><a href="aboutmeMid.html">About</a></li>
-                <li><a href="photosMid.html">Gallery</a></li>
-                <li><a href="resumeMid.html">Resume</a></li>
-
-            </ul>
-        </nav>
-    </header>
-
+		<nav>
+			<ul> 
+            <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
+            <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
+			<li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
+			<li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
+            <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
+			<li><a href="/JSFinal/pricing.html"data-page="prices">Services</a></li>
+			</ul>
+		</nav>
+	</div>
+	</header>
     <main>
-            <div class="MainPage-content">
-                <img src="/css-midterm/galleryimages/tulum.webp" alt="Tulum, MX">
-            </div>
-    </main>
+        <h1>howdy.</h1>
+        <div id="home-img">
+        <img id="home-image" src="/css-midterm/galleryimages/DJI_0286-2.jpg"alt="Home Image, Tulum drone b&w">
+        </div>
+    </main> 
+		<button id="get-info">Get in touch</button>
+		<div id="popup-form" class="form-popup">
+			<form class="form-container" action="https://formspree.io/f/mzbqolvb" method="POST">
+				<h3>Let's chat!</h3>
+				<label for="name"><b>Name</b></label>
+				<input type="text" placeholder="Enter Name" name="name" required>
 
-    <footer>
-        <p>&copy; 2023 Katie Lynn Fischer</p>
-    </footer>
+				<label for="email"><b>Email</b></label>
+				<input type="email" placeholder="Enter Email" name="email" required>
+
+				<label for="message"><b>What would you like to connect about?</b></label>
+				<textarea placeholder="Enter Message" name="message" required></textarea>
+
+				<button type="submit" class="btn">Submit</button>
+				<button type="button" class="btn cancel" id="close-btn">Close</button>
+			
+		</div>
+	</main>
+	<footer>
+		<p>&copy; 2023 Katie Lynn Fischer</p>
+	</footer>
 </body>
 </html>
