removed JS final structure

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,23 +4,23 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About Me | Katie Lynn Fischer</title>
-	<link rel="stylesheet" type="text/css" href="/JSFinal/jsFinal.css">
-	<script src="/JSFinal/jsFinal.js"></script>
+	<link rel="stylesheet" type="text/css" href="/styles.css">
+	<script src="/tools.js"></script>
 </head>
 <body>
 	<header>
 		<div class="header-container">
-        	<a href="/JSFinal/jsFinal.html" class="header-logo-link">
-            	<img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        	<a href="/" class="header-logo-link">
+            	<img src="/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         </a>
 		<nav>
 			<ul>
-            <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
-            <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
-			<li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
-			<li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
-            <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
-			<li><a href="/JSFinal/pricing.html"data-page="prices">Services</a></li>
+				<li><a href="/"data-page="home">Home</a></li>
+				<li><a href="/aboutme.html"data-page="about me">About Me</a></li>
+				<li><a href="/resume.html"data-page="resume">Resume</a></li>
+				<li><a href="/photos.html"data-page="gallery">Gallery</a></li>
+				<li><a href="/design.html"data-page="design">Design</a></li>
+				<li><a href="/pricing.html"data-page="prices">Services</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -28,7 +28,7 @@
 	<main>
 		<section id="about-me">
             <div class="about-me-image">
-                <img src="/JSFinal/designfiles/bnwmeeee.jpg" alt="Website owner, Katie Fischer, in Aspen">
+                <img src="/designfiles/bnwmeeee.jpg" alt="Website owner, Katie Fischer, in Aspen">
             </div>
             <div class="about-me-text">
                     <p>Hi, I'm Katie Lynn. I've spent the last 8 years as a photographer, which my website shows just a small portion of the work I've done. I've shot lifestyle, weddings, boudoir, product, headshots, family, maternity, etc. While I've loved being behind the camera, I am currently pursuing new creative avenues through the <a href= "https://www.colorado.edu/atlas/">Creative Technology & Design</a> program at University of Colorado, Boulder. My expected graduation is Fall of 2024. I've included some of my design work under the "Design" tab. When I'm not photographing or at school, I am definitely hanging out with my cattle dog, <a href="https://www.instagram.com/billiegirlblue/">Billie</a>, playing in the snow, or taking my car off-road. I hope we can connect!</p>
