--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Katie Lynn Fischer</title>
-	<link rel="stylesheet" type="text/css" href="/JSFinal/jsFinal.css">
-	<script src="/JSFinal/jsFinal.js"></script>
+	<link rel="stylesheet" type="text/css" href="/styles.css">
+	<script src="/tools.js"></script>
 </head>
 <body>
 	<header>
 		<div class="header-container">
-        	<a href="/JSFinal/jsFinal.html" class="header-logo-link">
-            	<img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        	<a href="/" class="header-logo-link">
+            	<img src="/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         </a>
 		<nav>
 			<ul> 
-            <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
-            <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
-			<li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
-			<li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
-            <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
-			<li><a href="/JSFinal/pricing.html"data-page="prices">Services</a></li>
+                <li><a href="/"data-page="home">Home</a></li>
+                <li><a href="/aboutme.html"data-page="about me">About Me</a></li>
+                <li><a href="/resume.html"data-page="resume">Resume</a></li>
+                <li><a href="/photos.html"data-page="gallery">Gallery</a></li>
+                <li><a href="/design.html"data-page="design">Design</a></li>
+                <li><a href="/pricing.html"data-page="prices">Services</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -27,7 +27,7 @@
     <main>
         <h1>howdy.</h1>
         <div id="home-img">
-        <img id="home-image" src="/css-midterm/galleryimages/DJI_0286-2.jpg"alt="Home Image, Tulum drone b&w">
+        <img id="home-image" src="/galleryimages/DJI_0286-2.jpg"alt="Home Image, Tulum drone b&w">
         </div>
     </main> 
 		<button id="get-info">Get in touch</button>
