--- a/pricing.html
+++ b/pricing.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section id="prices">
-            <h1>handy dandy list of services & prices</h1>
+            <h1>list of services</h1>
             <ul>
                 <li>
                     <h1 class="item-title">- Engagement Session - $450</h1>
