--- a/pricing.html
+++ b/pricing.html
@@ -52,7 +52,7 @@
                 </li>
                 <li>
                     <h1 class="item-title">- Lifestyle & Modeling - $600</h1>
-                    <p class="item-desc">Two hours & two locations. Dating profiles, instagram, building a portfolio? Whatever you neeed, let's do it and let's have fun with it.</p>
+                    <p class="item-desc">Two hours & two locations. Dating profiles, instagram, building a portfolio? Whatever you need, let's do it & have fun with it.</p>
                 </li>
                 <li>
                     <h1 class="item-title">- Boulder Vicinity Wedding Option A - $4000</h1>
