--- a/pricing.html
+++ b/pricing.html
@@ -79,7 +79,7 @@
 							<label for="email"><b>Email</b></label>
 							<input type="email" placeholder="Enter Email" name="email" required>
 			
-							<label for="message"><b>What would you like to connect about?</b></label>
+							<label for="message"><b>Tell me a bit about what sort of photoshoot you're looking to do!</b></label>
 							<textarea placeholder="Enter Message" name="message" required></textarea>
 			
 							<button type="submit" class="btn">Submit</button>
