--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
     </header>
     <div class="resume-content">
        <br>
-        <img id="resume-image"<img src="/designfiles/Fischer_Katie_Resume_2025.png"alt="Resume">
+        <img id="resume-image"<img src="/designfiles/Fischer_Katie_Resume.pdf"alt="Resume">
        <br>
        <br>
     </div>
